# harmonicsPractice

./: .gitignore  CMakeLists.txt  CREDITS  HarmonicBox.qml  LabelButton.qml  Main.qml  README.md  csengine.cpp  csengine.h  csoundproxy.h  csoundproxy.mm  harmonicsPractice.csd  harmonicsPractice.pro  main.cpp  qtquickcontrols2.conf  resources.qrc
android/: AndroidManifest.xml
android/res/values/: ic_launcher_background.xml
ios/: Info.plist  LaunchScreen.storyboard
